# kittens-store

./: .flake8  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
kittens_store/: app.py  dependency.py  run.py
kittens_store/bot/: __init__.py  commands.py  config.py  web_init_data_check.py
kittens_store/data/: __init__.py  clear_out.json
kittens_store/dependencies/: init_data.py  tg.py  tg_app.py
kittens_store/routers/: __init__.py  new_tg.py  questions.py  tg.py  tg_web_hook.py
kittens_store/store/: __init__.py
kittens_store/store/base/: __init__.py  dto.py  exceptions.py  question.py
kittens_store/store/memory_base/: __init__.py  question.py
kittens_store/templates/: __init__.py  base.html  close.html  item.html  loader.html  new-menu.html  pagination.html  search.html  test.html
tests/: conftest.py
