[tool.poetry]
name = "kittens-store"
version = "0.1.0"
description = ""
authors = ["rychanya <rychanya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.1"}
Jinja2 = "^3.1.2"
python-telegram-bot = "20.0a6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
bandit = {extras = ["toml"], version = "^1.7.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
